--- a/Source/Conference/IVJIAAIS2017/PosterJIAAIS/PosterJIAAIS.tex
+++ b/Source/Conference/IVJIAAIS2017/PosterJIAAIS/PosterJIAAIS.tex
@@ -263,7 +263,7 @@ We  evaluate the robustness of the proposed estimator defining $Z=(1-B)W+BU$ whe
 %\end{itemize}
 
 \section*{\textcolor{blue}{Stylized Samples}}
-Empirical Influence Function shows the performance of the estimator $\widehat{\alpha}_{\text{\tiny{T}}}$ when $n-1$ observations are fixed and one range over the support of the distribution. It depends on the particular sample so, to avoid this, Andrews et al.~\cite{Andrews1972} proposed using the $i^{th}$ quantile of the assumed distribution to characterize the typical observations $z_i=F^{-1}\big((i-1/3)/(n+1/3) \big)$, $1\leq i\leq n-1$.
+Empirical Influence Function shows the performance of the estimator $\widehat{\alpha}_{\text{\tiny{T}}}$ when $n-1$ observations are fixed and one ranges over the support of the distribution. It depends on the particular sample so, to avoid this, Andrews et al.~\cite{Andrews1972} proposed using the $i^{th}$ quantile of the assumed distribution to characterize the typical observations $z_i=F^{-1}\big((i-1/3)/(n+1/3) \big)$, $1\leq i\leq n-1$.
 
 \begin{center}
 	\begin{minipage}[t]{0.96\linewidth}
